--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             </div>
         </div>
         <div class="img01">
-            <div class="sub-head "><h2>Delivering Happiness</h2>
+            <!-- <div class="sub-head "><h2>Delivering Happiness</h2>
                 <p>Building a billion relationships</p>
-            </div>
+            </div> -->
         </div>
 </header>
 
@@ -133,8 +133,7 @@
               <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Reliance Smart Point</a></li>
               <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">JioMart</a></li>
               <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Reliance Digital </a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Jio Store </a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Reliance Trends</a></li>
+              
             </ul>
           </div>
 
